v5.4
-----
+ Added option to hide DLC for games you do not own

v5.3.3
-----
+ Added highlighting to Community Choice games on homepage
: Fixed a bug with market links on Snow Globe badge progress page

v5.3.2
-----
: Fixed a bug that caused homepage lists not to highlight when scrolled

v5.3.1
-----
+ Added highlighting to homepage of Winter Sale
: Fixed some localization strings in the options page
: Fixed a bug where the changelog would be displayed twice when resetting options

v5.3
-----
+ Added regional pricing indicators to sale pages and the daily deal
+ Added profile link to AStats.nl
+ Added option to hide globe icon in regional pricing
+ Added an option to hide trademark symbols in game titles
: Completely rewrote function to get inventory market prices (thanks Sharkiller!)
: Fixed numerous bugs with regional pricing
: Re-added profile link to Backpack.tf
: Fixed a bug that caused wishlist filtering options not to underline properly
: Fixed a bug where DRM warnings were displayed if DRM was mentioned in top reviews
: Fixed a bug causing some games and collections to incorrectly trigger split pack price dialog
- Removed "Hide Early Access From New Releases" feature as Steam now does this automatically
- Removed "Hide NEW over username" option as it is no longer required

v5.2.1
-----
: Fixed plugin permissions issue causing some users not to upgrade to 5.2

v5.2
-----
+ Added regional price comparison feature which is fully configurable in options
+ Added sale information to wishlist entries
+ Added "ADD UNOWNED DLC TO CART" button on app pages
+ Added "Buy Wishlist" section to wishlist pages
: Fixed a bug where some inventory market links were not functioning correctly
: Fixed a bug where some non-marketable inventory items were incorrectly trying to find market prices

v5.1.1
-----
+ Added support for homepage highlighting on the Autumn / Spring sale
: Fixed a bug where some some strings weren't being translated properly