@@ -46,6 +46,7 @@ var localized_strings,
 			options_steamdb: "Show SteamDB links",
 			options_wsgf: "Show WSGF (Widescreen) info",
 			options_show_package_info: "Show package info for all apps",
+            options_show_sysreqcheck: "Show button to check system requirements on app pages (Experimental!)",
 			options_show_steamchart_info: "Show SteamCharts.com info",
 			options_carousel_description: "Show app descriptions on storefront carousel",
 			options_profile_links: "Show profile links to",
